refactor(nlu): update singlish nlu data

--- a/rasa/data/sin.yml
+++ b/rasa/data/sin.yml
@@ -29,3 +29,8 @@ nlu:
     - dan nawaththanna
     - mata meka karanna ba
     - ow mata puluwan
+    - good morning yaluwa
+    - gindara
+    - supiri
+    - ow ow
+    - ai form ekak
