--- a/rasa_v2/config.yml
+++ b/rasa_v2/config.yml
@@ -19,7 +19,7 @@ pipeline:
     analyzer: char
     min_ngram: 2
     max_ngram: 6
-  - name: components.nlu.classifiers.custom_diet_classifier.DIETClassifier
+  - name: DIETClassifier
     epochs: 200
     constrain_similarities: true
   - name: FallbackClassifier
